Published: env file example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,18 @@
+#Local project path
+PROJECT_PATH ='' 
 
+#CREDENTIALS
+mEmail = ""
+mPassword = ''
+
+#Company subdomain
+main_url = ''
+login_url = ''
+
+#Template xlsx for export
+excel_template = 'Audit.xlsx' 
+
+#API ENDPOINT
+# (customize if needed)
+API_INSERT = 'http://127.0.0.1:8000/api/json-endpoint'
+API_SELECT = 'http://127.0.0.1:8000/api/getAll'
